:zap: correção na foto e fonte

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
       name="Description"
       content="Web visit with my social networks"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link rel="dns-prefetch" href="//fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" lazyload>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/images/favicon.png" lazyload/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icons/logo192x192.png" lazyload/>
     <link rel="manifest" href="./manifest.json" lazyload>
